feat: Delete Team and User route (#80)
