# back/route/admin/route_team.go
@@ -246,3 +246,35 @@ func UpdateTeam(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{"team": output})
 
 }
+
+// DeleteTeamById godoc
+// @Summary     Delete a single team by id
+// @Description Delete a single team
+// @Tags        Admin
+// @Produce     json
+// @Param       id   path     string            true  "Team id"
+// @Success 204 {string}  "OK"
+// @Failure     400  {string} string "Invalid input"
+// @Failure     500  {string} string "Internal server error"
+// @Router      /api/admin/team/delete/{id} [delete]
+// @Security ApiKeyAuth
+func DeleteTeamById(context *gin.Context) {
+
+	id, err := bson.ObjectIDFromHex(context.Param("id"))
+
+	if err != nil {
+		err = context.AbortWithError(http.StatusBadRequest, err)
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	err = service.DeleteTeamById(id)
+
+	if err != nil {
+		err = context.AbortWithError(http.StatusInternalServerError, err)
+		context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	context.Status(http.StatusNoContent)
+}
